--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="demo.html" class="btn btn-secondary my-2">Demo</a>
         <a href="profile.html" class="btn btn-secondary my-2">My profile</a>
           </p>
-      <p class="lead">decentralized comments platfrom on <a href="https://nebulas.io" target="_blank">Nebulas</a> blockchain</p>
+      <p class="lead">decentralized comments platform on <a href="https://nebulas.io" target="_blank">Nebulas</a> blockchain</p>
       <p>Three steps to install on your site:</p>
       <ol>
         <li>Install <a href="https://github.com/ChengOrangeJu/WebExtensionWallet" target="_blank">Nebulas Chrome Extension Wallet</a></li>
