--- a/demo.html
+++ b/demo.html
@@ -23,7 +23,7 @@
         <a href="demo.html" class="btn btn-primary my-2">Demo</a>
         <a href="profile.html" class="btn btn-secondary my-2">My profile</a>
       </p>
-      <p class="lead">decentralized comments platfrom on <a href="https://nebulas.io" target="_blank">Nebulas</a> blockchain</p>
+      <p class="lead">decentralized comments platform on <a href="https://nebulas.io" target="_blank">Nebulas</a> blockchain</p>
       <script src="install/nascom.js"></script> <script>var nascom_website_id = 1;</script><div id="nascom"></div>
     </main>
 
