--- a/demo.html
+++ b/demo.html
@@ -24,6 +24,8 @@
         <a href="profile.html" class="btn btn-secondary my-2">My profile</a>
       </p>
       <p class="lead">decentralized comments platform on <a href="https://nebulas.io" target="_blank">Nebulas</a> blockchain</p>
+      <p>Sites using nascom:</p>
+      <ul><li><a href="https://nebulas.help/" target="_blank">nebulas.help</a></li></ul>
       <script src="install/nascom.js"></script> <script>var nascom_website_id = 1;</script><div id="nascom"></div>
     </main>
 
